libpq_fe.pas


function PQconnectStart(conninfo:PChar):PPGconn; cdecl; external libpq;
function PQconnectPoll(conn:PPGconn):PostgresPollingStatusType; cdecl; external libpq;
function PQconnectdb(conninfo:PChar):PPGconn; cdecl; external libpq;
function PQsetdbLogin(pghost:PChar; pgport:PChar; pgoptions:PChar; pgtty:PChar; dbName:PChar;
           login:PChar; pwd:PChar):PPGconn; cdecl; external libpq;
procedure PQfinish(conn:PPGconn); cdecl; external libpq;
function PQconndefaults:PPQconninfoOption; cdecl; external libpq;
function PQconninfoParse(conninfo:PChar; errmsg:PPchar):PPQconninfoOption; cdecl; external libpq;
procedure PQconninfoFree(connOptions:PPQconninfoOption); cdecl; external libpq;
function PQresetStart(conn:PPGconn):longint; cdecl; external libpq;
function PQresetPoll(conn:PPGconn):PostgresPollingStatusType; cdecl; external libpq;
procedure PQreset(conn:PPGconn); cdecl; external libpq;
function PQgetCancel(conn:PPGconn):PPGcancel; cdecl; external libpq;
procedure PQfreeCancel(cancel:PPGcancel); cdecl; external libpq;
function PQcancel(cancel:PPGcancel; errbuf:PChar; errbufsize:longint):longint; cdecl; external libpq;
function PQrequestCancel(conn:PPGconn):longint; cdecl; external libpq;
function PQdb(conn:PPGconn):PChar; cdecl; external libpq;
function PQuser(conn:PPGconn):PChar; cdecl; external libpq;
function PQpass(conn:PPGconn):PChar; cdecl; external libpq;
function PQhost(conn:PPGconn):PChar; cdecl; external libpq;
function PQport(conn:PPGconn):PChar; cdecl; external libpq;
function PQtty(conn:PPGconn):PChar; cdecl; external libpq;
function PQoptions(conn:PPGconn):PChar; cdecl; external libpq;
function PQstatus(conn:PPGconn):ConnStatusType; cdecl; external libpq;
function PQtransactionStatus(conn:PPGconn):PGTransactionStatusType; cdecl; external libpq;
function PQparameterStatus(conn:PPGconn; paramName:PChar):PChar; cdecl; external libpq;
function PQprotocolVersion(conn:PPGconn):longint; cdecl; external libpq;
function PQserverVersion(conn:PPGconn):longint; cdecl; external libpq;
function PQerrorMessage(conn:PPGconn):PChar; cdecl; external libpq;
function PQsocket(conn:PPGconn):longint; cdecl; external libpq;
function PQbackendPID(conn:PPGconn):longint; cdecl; external libpq;
function PQconnectionNeedsPassword(conn:PPGconn):longint; cdecl; external libpq;
function PQconnectionUsedPassword(conn:PPGconn):longint; cdecl; external libpq;
function PQclientEncoding(conn:PPGconn):longint; cdecl; external libpq;
function PQsetClientEncoding(conn:PPGconn; encoding:PChar):longint; cdecl; external libpq;
function PQgetssl(conn:PPGconn):pointer; cdecl; external libpq;
procedure PQinitSSL(do_init:longint); cdecl; external libpq;
procedure PQinitOpenSSL(do_ssl:longint; do_crypto:longint); cdecl; external libpq;
function PQsetErrorVerbosity(conn:PPGconn; verbosity:PGVerbosity):PGVerbosity; cdecl; external libpq;
procedure PQtrace(conn:PPGconn; debug_port:PFILE); cdecl; external libpq;
procedure PQuntrace(conn:PPGconn); cdecl; external libpq;
function PQsetNoticeReceiver(conn:PPGconn; proc:PQnoticeReceiver; arg:pointer):PQnoticeReceiver; cdecl; external libpq;
function PQsetNoticeProcessor(conn:PPGconn; proc:PQnoticeProcessor; arg:pointer):PQnoticeProcessor; cdecl; external libpq;
function PQregisterThreadLock(newhandler:pgthreadlock_t):pgthreadlock_t; cdecl; external libpq;
function PQexec(conn:PPGconn; query:PChar):PPGresult; cdecl; external libpq;
function PQexecParams(conn:PPGconn; command:PChar; nParams:longint; paramTypes:POid; paramValues: PPChars;
           paramLengths: PIntegers; paramFormats: PIntegers; resultFormat:longint):PPGresult; cdecl; external libpq;
function PQprepare(conn:PPGconn; stmtName:PChar; query:PChar; nParams:longint; paramTypes:POid):PPGresult; cdecl; external libpq;
function PQexecPrepared(conn:PPGconn; stmtName:PChar; nParams:longint; paramValues: PPChars; paramLengths:PIntegers;
           paramFormats:PIntegers; resultFormat:longint):PPGresult; cdecl; external libpq;
function PQsendQuery(conn:PPGconn; query:PChar):longint; cdecl; external libpq;
function PQsendQueryParams(conn:PPGconn; command:PChar; nParams:longint; paramTypes:POid; paramValues: PPChars;
           paramLengths:Plongint; paramFormats:Plongint; resultFormat:longint):longint; cdecl; external libpq;
function PQsendPrepare(conn:PPGconn; stmtName:PChar; query:PChar; nParams:longint; paramTypes:POid):longint; cdecl; external libpq;
function PQsendQueryPrepared(conn:PPGconn; stmtName:PChar; nParams:longint; paramValues: PPChars; paramLengths:Plongint;
           paramFormats:Plongint; resultFormat:longint):longint; cdecl; external libpq;
function PQgetResult(conn:PPGconn):PPGresult; cdecl; external libpq;
function PQisBusy(conn:PPGconn):longint; cdecl; external libpq;
function PQconsumeInput(conn:PPGconn):longint; cdecl; external libpq;
function PQnotifies(conn:PPGconn):PPGnotify; cdecl; external libpq;
function PQputCopyData(conn:PPGconn; buffer:PChar; nbytes:longint):longint; cdecl; external libpq;
function PQputCopyEnd(conn:PPGconn; errormsg:PChar):longint; cdecl; external libpq;
function PQgetCopyData(conn:PPGconn; buffer:PPchar; async:longint):longint; cdecl; external libpq;
function PQgetline(conn:PPGconn; _string:PChar; length:longint):longint; cdecl; external libpq;
function PQputline(conn:PPGconn; _string:PChar):longint; cdecl; external libpq;
function PQgetlineAsync(conn:PPGconn; buffer:PChar; bufsize:longint):longint; cdecl; external libpq;
function PQputnbytes(conn:PPGconn; buffer:PChar; nbytes:longint):longint; cdecl; external libpq;
function PQendcopy(conn:PPGconn):longint; cdecl; external libpq;
function PQsetnonblocking(conn:PPGconn; arg:longint):longint; cdecl; external libpq;
function PQisnonblocking(conn:PPGconn):longint; cdecl; external libpq;
function PQisthreadsafe:longint; cdecl; external libpq;
function PQflush(conn:PPGconn):longint; cdecl; external libpq;
function PQfn(conn:PPGconn; fnid:longint; result_buf:Plongint; result_len:Plongint; result_is_int:longint;
           args:PPQArgBlock; nargs:longint):PPGresult; cdecl; external libpq;
function PQresultStatus(res:PPGresult):ExecStatusType; cdecl; external libpq;
function PQresStatus(status:ExecStatusType):PChar; cdecl; external libpq;
function PQresultErrorMessage(res:PPGresult):PChar; cdecl; external libpq;
function PQresultErrorField(res:PPGresult; fieldcode:longint):PChar; cdecl; external libpq;
function PQntuples(res:PPGresult):longint; cdecl; external libpq;
function PQnfields(res:PPGresult):longint; cdecl; external libpq;
function PQbinaryTuples(res:PPGresult):longint; cdecl; external libpq;
function PQfname(res:PPGresult; field_num:longint):PChar; cdecl; external libpq;
function PQfnumber(res:PPGresult; field_name:PChar):longint; cdecl; external libpq;
function PQftable(res:PPGresult; field_num:longint):Oid; cdecl; external libpq;
function PQftablecol(res:PPGresult; field_num:longint):longint; cdecl; external libpq;
function PQfformat(res:PPGresult; field_num:longint):longint; cdecl; external libpq;
function PQftype(res:PPGresult; field_num:longint):Oid; cdecl; external libpq;
function PQfsize(res:PPGresult; field_num:longint):longint; cdecl; external libpq;
function PQfmod(res:PPGresult; field_num:longint):longint; cdecl; external libpq;
function PQcmdStatus(res:PPGresult):PChar; cdecl; external libpq;
function PQoidStatus(res:PPGresult):PChar; cdecl; external libpq;
function PQoidValue(res:PPGresult):Oid; cdecl; external libpq;
function PQcmdTuples(res:PPGresult):PChar; cdecl; external libpq;
function PQgetvalue(res:PPGresult; tup_num:longint; field_num:longint):PChar; cdecl; external libpq;
function PQgetlength(res:PPGresult; tup_num:longint; field_num:longint):longint; cdecl; external libpq;
function PQgetisnull(res:PPGresult; tup_num:longint; field_num:longint):longint; cdecl; external libpq;
function PQnparams(res:PPGresult):longint; cdecl; external libpq;
function PQparamtype(res:PPGresult; param_num:longint):Oid; cdecl; external libpq;
function PQdescribePrepared(conn:PPGconn; stmt:PChar):PPGresult; cdecl; external libpq;
function PQdescribePortal(conn:PPGconn; portal:PChar):PPGresult; cdecl; external libpq;
function PQsendDescribePrepared(conn:PPGconn; stmt:PChar):longint; cdecl; external libpq;
function PQsendDescribePortal(conn:PPGconn; portal:PChar):longint; cdecl; external libpq;
procedure PQclear(res:PPGresult); cdecl; external libpq;
procedure PQfreemem(ptr:pointer); cdecl; external libpq;
function PQmakeEmptyPGresult(conn:PPGconn; status:ExecStatusType):PPGresult; cdecl; external libpq;
function PQcopyResult(src:PPGresult; flags:longint):PPGresult; cdecl; external libpq;
function PQsetResultAttrs(res:PPGresult; numAttributes:longint; attDescs:PPGresAttDesc):longint; cdecl; external libpq;
function PQresultAlloc(res:PPGresult; nBytes:size_t):pointer; cdecl; external libpq;
function PQsetvalue(res:PPGresult; tup_num:longint; field_num:longint; value:PChar; len:longint):longint; cdecl; external libpq;
function PQescapeStringConn(conn:PPGconn; c_to:PChar; from:PChar; length:size_t; error:Plongint):size_t; cdecl; external libpq;
function PQescapeByteaConn(conn:PPGconn; from:PByte; from_length:size_t; to_length:Psize_t):PByte; cdecl; external libpq;
function PQunescapeBytea(strtext:PByte; retbuflen:Psize_t):PByte; cdecl; external libpq;
function PQescapeString(c_to:PChar; from:PChar; length:size_t):size_t; cdecl; external libpq;
function PQescapeBytea(from:PByte; from_length:size_t; to_length:Psize_t):PByte; cdecl; external libpq;
procedure PQprint(fout:PFILE; res:PPGresult; ps:PPQprintOpt); cdecl; external libpq;
procedure PQdisplayTuples(res:PPGresult; fp:PFILE; fillAlign:longint; fieldSep:PChar; printHeader:longint;
            quiet:longint); cdecl; external libpq;
procedure PQprintTuples(res:PPGresult; fout:PFILE; printAttName:longint; terseOutput:longint; width:longint); cdecl; external libpq;
function lo_open(conn:PPGconn; lobjId:Oid; mode:longint):longint; cdecl; external libpq;
function lo_close(conn:PPGconn; fd:longint):longint; cdecl; external libpq;
function lo_read(conn:PPGconn; fd:longint; buf:PChar; len:size_t):longint; cdecl; external libpq;
function lo_write(conn:PPGconn; fd:longint; buf:PChar; len:size_t):longint; cdecl; external libpq;
function lo_lseek(conn:PPGconn; fd:longint; offset:longint; whence:longint):longint; cdecl; external libpq;
function lo_creat(conn:PPGconn; mode:longint):Oid; cdecl; external libpq;
function lo_create(conn:PPGconn; lobjId:Oid):Oid; cdecl; external libpq;
function lo_tell(conn:PPGconn; fd:longint):longint; cdecl; external libpq;
function lo_truncate(conn:PPGconn; fd:longint; len:size_t):longint; cdecl; external libpq;
function lo_unlink(conn:PPGconn; lobjId:Oid):longint; cdecl; external libpq;
function lo_import(conn:PPGconn; filename:PChar):Oid; cdecl; external libpq;
function lo_import_with_oid(conn:PPGconn; filename:PChar; lobjId:Oid):Oid; cdecl; external libpq;
function lo_export(conn:PPGconn; lobjId:Oid; filename:PChar):longint; cdecl; external libpq;
function PQmblen(s:PChar; encoding:longint):longint; cdecl; external libpq;
function PQdsplen(s:PChar; encoding:longint):longint; cdecl; external libpq;
function PQenv2encoding:longint; cdecl; external libpq;
function PQencryptPassword(passwd:PChar; user:PChar):PChar; cdecl; external libpq;
function pg_char_to_encoding(name:PChar):longint; cdecl; external libpq;
function pg_encoding_to_char(encoding:longint):PChar; cdecl; external libpq;
function pg_valid_server_encoding_id(encoding:longint):longint; cdecl; external libpq;

function PQsetdb(M_PGHOST,M_PGPORT,M_PGOPT,M_PGTTY,M_DBNAME : PAnsiChar) : PPGconn;
begin
   result:=PQsetdbLogin(M_PGHOST,M_PGPORT,M_PGOPT,M_PGTTY,M_DBNAME,nil,nil);
end;

procedure PQfreeNotify(ptr : pointer);
begin
   PQfreemem(ptr);
end;


end.
